--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" type="image/x-icon" href="./src/img/deployed icon">
 	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
